--- a/TnTComponents/Core/TnTAccordion.razor
+++ b/TnTComponents/Core/TnTAccordion.razor
@@ -2,8 +2,8 @@
 @inherits TnTPageScriptComponent<TnTAccordion>
 @namespace TnTComponents
 
-<tnt-accordion @attributes="AdditionalAttributes" style="@CssStyle" @ref="Element">
-    <h3 class="@CssClass" >
+<tnt-accordion @attributes="AdditionalAttributes" style="@ElementStyle" @ref="Element">
+    <h3 class="@ElementClass" >
         @Title
         <MaterialIcon Icon="@MaterialIcon.ArrowDropDown"/>
     </h3>
