--- a/TnTComponents/Core/TnTSkeleton.razor
+++ b/TnTComponents/Core/TnTSkeleton.razor
@@ -1,5 +1,5 @@
 ﻿@namespace TnTComponents
 
-<div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
+<div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" @ref="Element">
 
 </div>
