--- a/TnTComponents/Grid/TnTDataGridCell.razor
+++ b/TnTComponents/Grid/TnTDataGridCell.razor
@@ -1,7 +1,7 @@
 ﻿@namespace TnTComponents.Grid
 @typeparam TGridItem
 <td @attributes="AdditionalAttributes"
-    class="@CssClass"
-    style="@CssStyle">
+    class="@ElementClass"
+    style="@ElementStyle">
     @ChildContent
 </td>
