--- a/TnTComponents/Grid/TnTDataGridHeaderCell.razor
+++ b/TnTComponents/Grid/TnTDataGridHeaderCell.razor
@@ -2,7 +2,7 @@
 @typeparam TGridItem
 @inherits TnTDataGridCell<TGridItem>
 <th @attributes="AdditionalAttributes"
-    class="@CssClass"
-    style="@CssStyle">
+    class="@ElementClass"
+    style="@ElementStyle">
     @ChildContent
 </th>
