--- a/TnTComponents/Layout/TnTFooter.razor
+++ b/TnTComponents/Layout/TnTFooter.razor
@@ -2,6 +2,6 @@
 @using TnTComponents.Core
 @inherits TnTComponentBase
 
-<tnt-footer @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
+<tnt-footer @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle">
     @ChildContent
 </tnt-footer>
