--- a/TnTComponents/Layout/TnTHeader.razor
+++ b/TnTComponents/Layout/TnTHeader.razor
@@ -2,6 +2,6 @@
 @namespace TnTComponents
 @inherits TnTComponentBase
 
-<tnt-header @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
+<tnt-header @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle">
     @ChildContent
 </tnt-header>
