--- a/TnTComponents/TabView/TnTTabChild.razor
+++ b/TnTComponents/TabView/TnTTabChild.razor
@@ -2,7 +2,7 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<tnt-tab-child @attributes="AdditionalAttributes" class="@CssClass" style="@_style" @ref="Element">
+<tnt-tab-child @attributes="AdditionalAttributes" class="@ElementClass" style="@_style" @ref="Element">
     @ChildContent
 </tnt-tab-child>
 
