--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -4,8 +4,8 @@
 
 <button is="tnt-button"
         @attributes="AdditionalAttributes"
-        class="@CssClass"
-        style="@CssStyle"
+        class="@ElementClass"
+        style="@ElementStyle"
         name="@Name"
         type="@Type.ToHtmlType()"
         disabled="@Disabled"
