--- a/TnTComponents/Chips/TnTChip.razor
+++ b/TnTComponents/Chips/TnTChip.razor
@@ -2,7 +2,7 @@
 @using TnTComponents.Core
 @inherits TnTComponentBase
 
-<label @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
+<label @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" @ref="Element">
     @StartIcon?.Render()
     <input type="checkbox" @onchange="@((args) => ValueChanged.InvokeAsync((bool)args.Value!))" />
     @ChildContent
