--- a/TnTComponents/Chips/TnTInputChip.razor
+++ b/TnTComponents/Chips/TnTInputChip.razor
@@ -2,7 +2,7 @@
 @using TnTComponents.Core
 @inherits TnTComponentBase
 
-<span @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
+<span @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" @ref="Element">
     @StartIcon?.Render()
     @ChildContent
     <TnTImageButton Icon="@CloseIcon" OnClick="CloseClicked"/>
