--- a/TnTComponents/Core/TnTExternalClickHandler.razor
+++ b/TnTComponents/Core/TnTExternalClickHandler.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TnTPageScriptComponent<TnTExternalClickHandler>
 
-<div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
+<div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" @ref="Element">
     @ChildContent
 </div>
 
