--- a/TnTComponents/Layout/TnTSideNavMenuLink.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuLink.razor
@@ -2,7 +2,7 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
+<div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle">
     <TnTNavLink Href="@Href" Match="@Match" StartIcon="Icon" Disabled="Disabled" ActiveBackgroundColor="ActiveBackgroundColor" Ripple="Ripple" @onclick:stopPropagation>
         @ChildContent
     </TnTNavLink>
