--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -3,7 +3,7 @@
 @inherits TnTPageScriptComponent<TnTTabView>
 @namespace TnTComponents
 
-<tnt-tab-view @attributes=AdditionalAttributes class="@CssClass" style="@CssStyle" @ref="Element">
+<tnt-tab-view @attributes=AdditionalAttributes class="@ElementClass" style="@ElementStyle" @ref="Element">
     <CascadingValue Value="this" IsFixed="true">
         <DeferRendering>
             <div class="@(CssClassBuilder.Create().AddBackgroundColor(HeaderBackgroundColor).Build())">
