--- a/TnTComponents/Layout/TnTSideNavMenuLink.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuLink.razor
@@ -1,5 +1,6 @@
 ﻿@using TnTComponents.Core
-@inherits TnTComponentBase
+@using TnTComponents.Interfaces
+@inherits TnTInteractableComponentBase
 @namespace TnTComponents
 
 <div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle">
