--- a/TnTComponents/TabView/TnTTabChild.razor
+++ b/TnTComponents/TabView/TnTTabChild.razor
@@ -1,5 +1,5 @@
 ﻿@using TnTComponents.Core
-@inherits TnTComponentBase
+@inherits TnTInteractableComponentBase
 @namespace TnTComponents
 
 <tnt-tab-child @attributes="AdditionalAttributes" class="@ElementClass" style="@_style" @ref="Element">
