--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -1,7 +1,8 @@
 ﻿@namespace TnTComponents
 @using TnTComponents.Core
+@using TnTComponents.Interfaces
 @inherits TnTPageScriptComponent<TnTImageButton>
-
+@implements ITnTInteractable
 <button is="tnt-button"
         @attributes="AdditionalAttributes"
         class="@ElementClass"
