Refactor icon and button styles
Removed `_materialIcons.scss` and updated imports in `style.scss`. The removal includes all styles for Material Symbols (`Sharp`, `Rounded`, `Outlined`) and size definitions (`mi-small`, `mi-medium`, `mi-large`, `mi-extra-large`). Updated the import path for `_materialIcons.scss` to `TnTComponents/_materialIcons.scss` and repositioned the `_buttons.scss` import within `style.scss`, also adding new button styles.

--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,7 +1,8 @@
-﻿@import 'Common/_materialIcons.scss';
+﻿@import 'TnTComponents/_materialIcons.scss';
 @import 'TnTComponents/_colors.scss';
 @import 'TnTComponents/_measurements.scss';
 
+@import 'TnTComponents/_buttons.scss';
 @import 'TnTComponents/_typeography.scss';
 @import 'TnTComponents/_elevation.scss';
 @import 'TnTComponents/_border-radius.scss';
@@ -9,7 +10,6 @@
 @import 'TnTComponents/_flex.scss';
 @import 'TnTComponents/_layout.scss';
 
-@import 'TnTComponents/_buttons.scss';
 @import 'TnTComponents/_input.scss';
 @import 'TnTComponents/_anchor.scss';
 @import 'TnTComponents/_progress.scss';
