--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -43,7 +43,7 @@
                 align-items: center;
                 width: 100%;
 
-                @extend .tnt-actionable-bg-color-transparent;
+                //@extend .tnt-actionable-bg-color-transparent;
             }
 
             & > span > span:last-child.tnt-icon {
