--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,10 +1,11 @@
 ﻿@import 'TnTComponents/_materialIcons.scss';
 @import 'TnTComponents/_colors.scss';
+@import 'TnTComponents/_interactivity.scss';
 @import 'TnTComponents/_measurements.scss';
+@import 'TnTComponents/_progress.scss';
 
 @import 'TnTComponents/_buttons.scss';
 @import 'TnTComponents/_typeography.scss';
-@import 'TnTComponents/_elevation.scss';
 @import 'TnTComponents/_border-radius.scss';
 @import 'TnTComponents/_ripple.scss';
 @import 'TnTComponents/_flex.scss';
@@ -12,7 +13,6 @@
 
 @import 'TnTComponents/_input.scss';
 @import 'TnTComponents/_anchor.scss';
-@import 'TnTComponents/_progress.scss';
 @import 'TnTComponents/_tabview.scss';
 @import 'TnTComponents/_accordion.scss';
 @import 'TnTComponents/_dialog.scss';
@@ -25,6 +25,14 @@
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
+}
+
+.tnt-interactable:not(.tnt-disabled) {
+    cursor: pointer;
+}
+
+.tnt-disabled {
+    cursor: not-allowed;
 }
 
 body {
