--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -15,7 +15,7 @@
                                                                                                                         .AddActionableBackgroundColor(!child.Disabled ? TnTColor.Transparent : null)
                                                                                                                         .AddBackgroundColor(child.Disabled ? TnTColor.Transparent : null)
                                                                                                                         .AddForegroundColor(HeaderTextColor)
-                                                                                                                        .SetDisabled(child.Disabled)
+                                                                                                                        .AddDisabled(child.Disabled)
                                                                                                                         .AddRipple()
                                                                                                                         .Build())">
                             @if (!SecondaryTabView) {
