--- a/TnTComponents/Styles/TnTComponents/_interactivity.scss
+++ b/TnTComponents/Styles/TnTComponents/_interactivity.scss
@@ -11,11 +11,24 @@ $elevation-shadows: ( //
 7: 0px 16px 20px 6px $tnt-color-shadow, //
 8: 0px 20px 24px 6px $tnt-color-shadow, //
 9: 0px 24px 28px 6px $tnt-color-shadow, //
-10: 0px 28px 32px 6px $tnt-color-shadow //
+10: 0px 28px 32px 6px $tnt-color-shadow, //
+11: 0px 32px 36px 8px $tnt-color-shadow //
 );
 
 @for $i from 0 through 10 {
     .tnt-elevation-#{$i} {
         box-shadow: map.get($elevation-shadows, $i);
+    }
+}
+
+.tnt-interactable {
+    &:hover:not(:active) {
+        box-shadow: map.get($elevation-shadows, 1);
+    }
+
+    @for $i from 0 through 10 {
+        &.tnt-elevation-#{$i}:hover:not(:active) {
+            box-shadow: map.get($elevation-shadows, $i + 1);
+        }
     }
 }
